--- a/index.html
+++ b/index.html
@@ -6,45 +6,319 @@
   <title>Main Page</title>
   <link rel="stylesheet" type="text/css" href="thesis.css">
 </head>
+<style>
+  body {
+    background-color: black;
+    color: white;
+  }
+
+  #fade {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 1s ease-in-out;
+    }
+
+  #fade-in {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
+  }
+</style>
 <body>
+  <div id="fade-in"></div>
   <div id="container">
     <div id="container">
-      <pre>
- ,--. ,--. ,------. ,--.     ,--.      ,-----.
- |  | |  | |  .---' |  |     |  |     |  .-.  |
- |   .|  | |  |     |  |     |  |     |  | |  |
- |       | |  '--.  |  |     |  |     |  | |  |
- |  .-.  | |  .--'  |  '---. |  '---. |  | |  |
- |  | |  | |  `---. |      | |      | '  '-'  '
- `--' `--' `------' `------' `------'  `-----'
+      <pre class="pointer" id="self1" onclick="nextFrame('self1')">
+        <div style="text-align: center;">
+Throughout my childhood, my father emphasized the importance of etiquette, poise, and respect.
+
+He taught me to carry myself with dignity, even through moments of discomfort.
+        </div>
+                                                    .-.
+                                                   /   \
+                                      . -౨ৎ.       \   /
+                                     // ^ \\       .-'-.
+                                    ()\   /()   __/| V |\\
+                                      .-'-.     --'|   |//
+                                     //   \\       |___|
+                                     '|___|'       | | |
+                                       | |         |_!_|
+                                       . .          ╝ ╝
       </pre>
-    </div>
-    <div id="container">
-      <pre>
-  _  _  ____  __     ___  __   _  _  ____    ____  __     _  _  _  _
- / )( \(  __)(  )   / __)/  \ ( \/ )(  __)  (_  _)/  \   ( \/ )( \/ )
- \ /\ / ) _) / (_/\( (__(  O )/ \/ \ ) _)     )( (  O )  / \/ \ )  /
- (_/\_)(____)\____/ \___)\__/ \_)(_/(____)   (__) \__/   \_)(_/(__/
-                   ____  _  _  ____  ____  __  ____
-                  (_  _)/ )( \(  __)/ ___)(  )/ ___)
-                    )(  ) __ ( ) _) \___ \ )( \___ \
-                   (__) \_)(_/(____)(____/(__)(____/
+      <pre class="pointer" style=" display: none;" id="self2" onclick="nextFrame('self2')">
+        <div style="text-align: center;">
+Growing up as one of the few Asian students in my middle and high school, I never felt like I fit in.
+
+I was often picked on for my race and appearance.
+
+While teachers assumed I was smart, my classmates labeled me as an overachiever.
+        </div>
+
+
+                                           ______/\______
+                    ______________________/     /  \     \______________________
+                   /                     /     / () \     \                     \
+                  /                     /     /      \     \                     \
+                 /                     /_____/        \_____\                     \
+                /______________________ |                  | ______________________\
+                  |   ___   ___   ___   |  ___   __   ___  |   ___   ___   ___   |
+                  |  |   | |   | |   |  | |   | |  | |   | |  |   | |   | |   |  |
+                  |  '---' '---' '---'  | '---' '--' '---' |  '---' '---' '---'  |
+                  |   ___   ___   ___   |      ______      |   ___   ___   ___   |
+                  |  |   | |   | |   |  |     |      |     |  |   | |   | |   |  |
+                  |  '---' '---' '---'  |     |      |     |  '---' '---' '---'  |
+                  |_____________________|_____|______|_____|_____________________|
+
+                         .-.                                          . - .
+                        / ^ \                  . -౨ৎ.                // ^ \\
+                        \   /                 // ^ \\               (_\   /_)
+                        .-'-.-->             ()\   /()             <--.-'-.
+                       /|___|                  .-'-.                  |___|\
+                       '|_|_|                 //   \\                 /___\'
+                         | |                  '|___|'                  | |
+                         . .                    | |                    . .
+                                  . - .         . .          .-.
+                                 // ^ \)^                 ^(/ ^ \
+                                ( \   //)                  \\   /
+                                / .-'-. \                   .-'-.
+                               ( //___\  )                  /___\\
+                                 '|_|_|                     | | |'
+                                   | |                      |_|_|
+                                   . .                       . .
       </pre>
-    </div>
-    <div id="container">
-      <pre class="pointer" onclick="goToIntroduction()">
-                .
- .. ............;;.
-  ..::::::::::::;;;;.
-. . ::::::::::::;;:'
-                :'
+      <pre class="pointer" style=" display: none;" id="self3" onclick="nextFrame('self3')">
+        <div style="text-align: center;">
+I was constantly asked by the same group of boys if my parents ate cats and dogs.
+
+Another student would constantly mock me, saying slurs like "ching chong" to imitate the Chinese language.
+        </div>
+
+
+                                           .-.             .-.
+                                          / ^ \.-.     .-./ ^ \
+                                          \   / ^ \.-./ ^ \   /
+                                          .-'-\   / ^ \   /-'-.
+                                         /|___.-'-\   /-'-.___|\
+                                         '| |/|___.-'-.___|\|_|'
+                                          |_|'|_|/|___|\| |' |
+                                           . . | '| | |'|_|. .
+                                               . .|_|_|. .
+                                           . -౨ৎ.  . .   .-.
+                                          // ^ \\       / ^ \
+                                         ()\   /()      \   /
+                                           .-'-.     <--.-'-.
+                                          //   \\       |___|\
+                                          '|___|'       | | |'
+                                            | |         |_|_|
+                                            . .          . .
+      </pre>
+      <pre class="pointer" style=" display: none;" id="self4" onclick="nextFrame('self4')">
+        <div style="text-align: center;">
+My father's teachings about masking my emotions led me to bottle everything up.
+
+I was scared to tell anyone about my emotional struggles in school, afraid that I would seem weak or incapable of being independent.
+        </div>
+                                                                   ╭────────────╮
+                                                                   │  I'm okay. │
+                                                                   ╰───,────────╯
+                                                               . -౨ৎ.
+                                                              // ^ \\
+                                                             ()\   /()
+                                                               .-'-.
+                                                              //   \\
+                                                              '|___|'
+                                                                | |
+                                                                . .
+      </pre>
+      <pre class="pointer" style=" display: none;" id="self5" onclick="nextFrame('self5')">
+        <div style="text-align: center;">
+All this emotional suppression over the years had made me a very sensitive person.
+
+I overthought everything, even simple tasks like crossing a street or entering a building.
+
+I stressed over the smallest things, always wondering if others were judging me.
+        </div>
+
+                                    ╭───────────────╮
+               ╭─────────────────╮  │ I should just │
+               │  They probably  │  │   disappear   │           ╭──────────────────╮
+               │   hate me now   │  ╰─ ╭────────────────────╮   │  Did they think  │
+               ╰─────────────.───╯     │     I must've      │   │  that was weird? │
+                        ╭─────\────────╮ embarrassed myself │   .──────────────────╯
+                        │  Why did I   │ ──── ╭────────────────/
+                        │   do that?   │      │  What if I am  │
+              ╭──────────────────╮ ────╯      │    a burden?   │ ───────────────────╮
+              │ I shouldn't have │            ╰───,────────────╯     I ruined       │
+              │    said that...  │      . -౨ৎ.                │ everything again... │
+              ╰──────────────────>     // ^ \\    <────────────────────╮ ───────────╯
+                                      ()\   /()   │  I should've just  │
+                                        .-'-.     │  stayed quiet...   │
+                                       //   \\    ╰────────────────────╯
+                                       '|___|'
+                                         | |
+                                         . .
+      </pre>
+      <pre class="pointer" style=" display: none;" id="self6" onclick="nextFrame('self6')">
+        <div style="text-align: center;">
+I remember every moment of embarrassment and shame, no matter how insignificant.
+
+Even the most fleeting moments, they continue to linger, like a constant reminder that I didn't belong.
+        </div>
+                                                           . - .         . - .
+                                                          // ^ \\       (/ ^ \)
+                                                          (\   /) . - .  \   /
+               // ^ \\. - . . - .                          .-'-. //   \\ .-'-.
+              ( \    // ^ \// ^ \\                        /|___|(_\   /_)|___|\
+              / .-'-(_\   (_\   /_)                       '| | |' .-'-. '| | |'
+             ( /|___| .-'-. .-'-.                          |_|_| /|___|\ |_|_|
+               '/___\//___\/|___|\                          . .   | | |  . .
+                 | | '|_|_|'/   \                                 |_|_|
+                 . .   | |  |___|               . -౨ৎ.             . .
+                       . .   . .               // ^ \\
+                                              ()\   /()
+                                                .-'-.
+                                               //   \\
+                                               '|___|'                                  . - .
+        .-.             .-.                      | |                        . - .      //   \\
+       / ^ \.-.     .-./ ^ \                     . .                       // ^ \\. - .(\   /).
+       \   / ^ \.-./ ^ \   /                                              (_\   / / ^ \ .-'-./
+       .-'-\   / ^ \   /-'-.                                                .-'-. \   / |___|
+      /|___.-'-\   /-'-.___|\                                              //___\,.-'-.,/___\
+      '| |/|___.-'-.___|\|_|'                                               |_|_|\|___|/ | |
+       |_|'|_|/|___|\| |' |                                                  | |  | | |  . .
+        . . | '| | |'|_|. .                                                  . .  |_|_|
+            . .|_|_|. .                                                            . .
+                . .
+      </pre>
+      <pre class="pointer" style=" display: none;" id="self7" onclick="nextFrame('self7')">
+        <div style="text-align: center;">
+I never forgave my past self, blaming her for all the shame and embarrassment that she put me through.
+
+I felt trapped by the shame and tears, unable to move forward or let go of the past.
+        </div>
+                                       ,୨‧୧,
+                                      //   \\
+                                     ( \   / )            . -౨ৎ.
+                                     / .-'-. \           // ^ \\
+                                      /(   )\           ()\   /()
+                                      '/___\'             .-'-.
+                                       | | |             //   \\
+                                       | | |             '|___|'
+                                       |_|_|               | |
+                                        ╚ ╚                . .
+      </pre>
+      <pre class="pointer" style=" display: none;" id="self8" onclick="nextFrame('self8')">
+        <div style="text-align: center;">
+But throughout college, I had discovered a place of comfort, having met many wonderful people who helped me heal.
+
+I'm finally learning to forgive my past self through this self-reflection.
+
+I no longer see someone who was weak, but someone who was just trying to survive.
+        </div>
+
+                         ┌───                                                    ───┐
+                         │                                                    • REC │
+                                                     . - .
+                                                    //   \\
+                                                 .-.|\   /|.-.
+                                                /   \.-'-./   \
+                                                \   /(   )\   /
+                                           . - ..-'-.,୨‧୧,.-'-. - .
+                                          // ^ \\   //   \\   //   \\
+             .౨ৎ,                        ( \   / )_( \   / )__|\   /|
+            /  \ )                       / .-'-. \|/ .-'-. \|( .-'-. )
+            \  ( )                        /(   )\ | /(   )\ | /(   )\
+             -'-                          '|===|'_|_'/___\'_|_'|___|'
+            / | \                          |   | ╚ ╚ | | | ╚ ╚ | | |
+            |_o_|                          |   |     | | |     | | |
+             ╱ ╲                           |___|     |_|_|     |_|_|
+            .   .                           ╚ ╚       ╚ ╚       ╚ ╚
+                         │                                                          │
+                         └───                                                    ───┘
+      </pre>
+      <pre class="pointer" style=" display: none;" id="self9" onclick="fadeAndRedirect()">
+        <div style="text-align: center;">
+This thesis project is not just a reflection for my past self, but a message to anyone who feels alone, unseen, or overwhelmed.
+
+You are not weak for feeling lost, nor broken for struggling.
+
+Healing and growth take time.
+
+Sometimes, all it takes is finding the right people, the right place, and the right moment.
+        </div>
       </pre>
     </div>
   </div>
+  <div id="fade"></div>
   <script>
-    function goToIntroduction() {
-      window.location.href = 'introduction.html';
+  let currentFrame = 1;
+  let idleTimer;
+
+  function resetIdleTimer() {
+    clearTimeout(idleTimer);
+    idleTimer = setTimeout(() => {
+      nextFrame('self' + currentFrame);
+    }, 60000); // 60000 = 1 minute
+  }
+
+  function nextFrame(currentId) {
+    const current = document.getElementById(currentId);
+    const next = document.getElementById('self' + (currentFrame + 1));
+    const fade = document.getElementById('fade');
+
+    if (next) {
+      fade.style.pointerEvents = 'auto';
+      fade.style.opacity = 1;
+
+      setTimeout(() => {
+        current.style.display = 'none';
+        next.style.display = 'block';
+        fade.style.opacity = 0;
+        fade.style.pointerEvents = 'none';
+        currentFrame++;
+        resetIdleTimer();
+      }, 1000);
+    } else {
+      fade.style.pointerEvents = 'auto';
+      fade.style.opacity = 1;
+      setTimeout(() => {
+        window.location.href = "morning.html";
+      }, 1000);
     }
-  </script>
+  }
+
+  window.onload = () => {
+    const fadeIn = document.getElementById('fade-in');
+    fadeIn.style.opacity = 0;
+    setTimeout(() => {
+      fadeIn.style.display = 'none';
+    }, 1000);
+
+    resetIdleTimer();
+  };
+
+  document.addEventListener('click', resetIdleTimer);
+
+  function fadeAndRedirect() {
+    const fade = document.getElementById('fade');
+    fade.style.pointerEvents = 'auto';
+    fade.style.opacity = 1;
+
+    setTimeout(() => {
+      window.location.href = "morning.html";
+    }, 1000);
+  }
+</script>
 </body>
 </html>
