--- a/classroom.html
+++ b/classroom.html
@@ -39,15 +39,24 @@
     font-family: monospace;
   }
 
-  #words_context {
+  #question, #words_question {
+    position: fixed;
+    top: 50px;
+    left: 16px;
+    margin: 0;
+    padding: 10px;
+    font-family: monospace;
+  }
+
+  #words_context, #words_question {
     display: none;
   }
 
-  #context:hover {
+  #context:hover, #question:hover {
     display: none;
   }
 
-  #context:hover + #words_context {
+  #context:hover + #words_context, #question:hover + #words_question {
     display: block;
   }
 </style>
@@ -59,9 +68,22 @@
 ╰╶╶╶╶╯
   </pre>
   <pre class="time" id="words_context">
-
-Context
-
+    ╭╶╶╶╶╶╶╶╶╶╮
+    : Context :
+    ╰╶╶╶╶╶╶╶╶╶╯
+  </pre>
+  <pre class="question" id="question">
+╭╶╶╶╶╮
+: ?? :
+╰╶╶╶╶╯
+  </pre>
+  <pre class="question" id="words_question">
+╭╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
+: To move between scenes and frames, :
+:    users will sometimes need to    :
+:  click on an area where the mouse  :
+: cursor turns into a hand pointer.  :
+╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
   </pre>
   <div id="container">
     <div id="container">
@@ -1169,19 +1191,19 @@ Context
       const clock = document.getElementById("clock");
       if (currentFrame >= 0 && currentFrame < 20) {
         clock.innerHTML = `╔══════════════════╗
-║ Mo█day │ 7:50 AM ║
+║ ███day │ 7:50 AM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 20) {
-        clock.innerHTML = `╔═════════════════════╗
-║ █ed█esday │ 7:51 AM ║
-╚═════════════════════╝`;
+        clock.innerHTML = `╔══════════════════╗
+║ ███day │ 7:51 AM ║
+╚══════════════════╝`;
 } else if (currentFrame === 28) {
         clock.innerHTML = `╔══════════════════╗
 ║ ███day │ 7:52 AM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 33) {
               clock.innerHTML = `╔══════════════════╗
-║ █onday │ 7:54 AM ║
+║ ███day │ 7:54 AM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 35) {
                           clock.innerHTML = `╔══════════════════╗
@@ -1192,12 +1214,12 @@ Context
 ║ ███day │ 8:30 AM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 39) {
-                          clock.innerHTML = `╔════════════════════╗
-║ █hu█sday │ 9:18 AM ║
-╚════════════════════╝`;
+                          clock.innerHTML = `╔══════════════════╗
+║ ███day │ 9:18 AM ║
+╚══════════════════╝`;
 } else if (currentFrame === 41) {
                           clock.innerHTML = `╔══════════════════╗
-║ █riday │ 9:20 AM ║
+║ ███day │ 9:20 AM ║
 ╚══════════════════╝`;
 } else if (currentFrame === 43) {
                           clock.innerHTML = `╔═══════════════════╗
@@ -1208,13 +1230,13 @@ Context
 ║ ███day │ 10:10 AM ║
 ╚═══════════════════╝`;
 } else if (currentFrame === 47) {
-                          clock.innerHTML = `╔═════════════════════╗
-║ █████day │ 10:49 AM ║
-╚═════════════════════╝`;
+                          clock.innerHTML = `╔═══════════════════╗
+║ ███day │ 10:49 AM ║
+╚═══════════════════╝`;
 } else if (currentFrame === 49) {
-                          clock.innerHTML = `╔══════════════════════╗
-║ ██████day │ 10:50 AM ║
-╚══════════════════════╝`;
+                          clock.innerHTML = `╔═══════════════════╗
+║ ███day │ 10:50 AM ║
+╚═══════════════════╝`;
 }
 
       const fade = document.getElementById("fade");
